package com.flyingwillow.utt.domain;

public class Dependence {
    private String groupId;
    private String artifactId;
    private String version;
}
