package com.flyingwillow.utt.domain;

import com.intellij.facet.Facet;
import com.intellij.openapi.projectRoots.Sdk;

public class ProjectInfo {
    private Sdk sdk;
    private Facet facet;
    private String buildType;
}
